<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>com.bitprogress</groupId>
    <artifactId>bit-progress</artifactId>
    <version>${revision}</version>
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>common</module>
        <module>server</module>
    </modules>

    <properties>
        <!-- Jdk Version -->
        <java.version>21</java.version>
        <!-- Revision -->
        <revision>1.0.0</revision>
        <!-- Spring Boot Version -->
        <spring-boot.version>3.2.5</spring-boot.version>
        <!-- 编码 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <!-- Spring Cloud Version -->
        <spring.cloud.version>2023.0.1</spring.cloud.version>
        <!-- Spring Cloud Alibaba Version -->
        <spring.cloud.alibaba.version>2023.0.1.0</spring.cloud.alibaba.version>
        <!-- Spring Cloud Alibaba Dubbo Version -->
        <spring.cloud.alibaba.dubbo.version>2021.1</spring.cloud.alibaba.dubbo.version>
        <!-- MyBatis-Plus Version -->
        <mybatisplus.version>3.5.6</mybatisplus.version>
        <!-- Mysql Connector Version -->
        <mysql.java.connector.version>8.0.28</mysql.java.connector.version>
        <!-- Lombok Version -->
        <lombok.version>1.18.32</lombok.version>
        <!-- Swagger -->
        <swagger.v3.version>2.2.21</swagger.v3.version>
        <!-- knife4j -->
        <knife4j.version>3.0.3</knife4j.version>
        <!-- Okhttp -->
        <okhttp.version>3.14.1</okhttp.version>
        <feign.okhttp.version>11.5</feign.okhttp.version>
        <!-- quartz -->
        <quartz.version>2.3.2</quartz.version>
        <!--AliSms-->
        <ali.sms.version>4.1.0</ali.sms.version>
        <!-- MapStruct -->
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
        <!-- MapStruct -->
        <org.redisson.version>2.15.2</org.redisson.version>
        <easyexcel.version>3.3.2</easyexcel.version>
    </properties>

    <packaging>pom</packaging>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- MyBatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-annotation</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-core</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>

            <!-- Mysql Connector -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.java.connector.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- Swagger -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${swagger.v3.version}</version>
            </dependency>

            <!-- Knife4j -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- OkHttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <!-- Redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${org.redisson.version}</version>
            </dependency>

            <!-- EasyExcel -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>